--- a/Swiftly Test Your Might/Swiftly Test Your Might/Base.lproj/Main.storyboard
+++ b/Swiftly Test Your Might/Swiftly Test Your Might/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -71,7 +70,7 @@
         <!--Number Pushed-->
         <scene sceneID="Sp2-J4-g9z">
             <objects>
-                <viewController id="pYw-ev-kvv" customClass="VCNumberPushed" customModule="Swiftly_Test_Your_Might" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="VCNumberPushed" storyboardIdentifier="VCNumberPushed" id="pYw-ev-kvv" customClass="VCNumberPushed" customModule="Swiftly_Test_Your_Might" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TmO-cd-gFO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -103,7 +102,7 @@
         <!--Tire Modal-->
         <scene sceneID="N5F-WL-vk8">
             <objects>
-                <viewController id="Dqj-xf-9w7" customClass="VCTireModal" customModule="Swiftly_Test_Your_Might" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="VCTireModal" storyboardIdentifier="VCTireModal" id="Dqj-xf-9w7" customClass="VCTireModal" customModule="Swiftly_Test_Your_Might" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IGz-55-0fP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -112,12 +111,21 @@
                                 <rect key="frame" x="37" y="76.5" width="300" height="534"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C7g-eF-Nv2">
+                                <rect key="frame" x="16" y="20" width="30" height="30"/>
+                                <state key="normal" title="v"/>
+                                <connections>
+                                    <action selector="goAway:" destination="Dqj-xf-9w7" eventType="touchUpInside" id="7QC-pN-UHm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="C7g-eF-Nv2" firstAttribute="leading" secondItem="DFg-2g-VcN" secondAttribute="leading" constant="16" id="82g-LO-z5u"/>
                             <constraint firstItem="2ku-sZ-dxn" firstAttribute="centerX" secondItem="DFg-2g-VcN" secondAttribute="centerX" id="Dpq-FF-Efc"/>
                             <constraint firstItem="2ku-sZ-dxn" firstAttribute="centerY" secondItem="DFg-2g-VcN" secondAttribute="centerY" id="E1w-Fy-oYa"/>
                             <constraint firstItem="2ku-sZ-dxn" firstAttribute="width" secondItem="IGz-55-0fP" secondAttribute="width" multiplier="0.8" id="NRw-gs-K2i"/>
+                            <constraint firstItem="C7g-eF-Nv2" firstAttribute="top" secondItem="DFg-2g-VcN" secondAttribute="top" id="p1o-hO-Gk6"/>
                             <constraint firstItem="2ku-sZ-dxn" firstAttribute="height" secondItem="IGz-55-0fP" secondAttribute="height" multiplier="0.8" id="s28-ig-KNy"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DFg-2g-VcN"/>
