--- a/Swiftly Test Your Might/Swiftly Test Your Might/Custom UI/CVAutomobile.xib
+++ b/Swiftly Test Your Might/Swiftly Test Your Might/Custom UI/CVAutomobile.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -29,6 +28,9 @@
                             <constraint firstAttribute="width" secondItem="4WB-B4-kZ1" secondAttribute="height" multiplier="1:1" id="VnZ-OP-xsM"/>
                         </constraints>
                         <state key="normal" title="Push"/>
+                        <connections>
+                            <action selector="push:" destination="gTV-IL-0wX" eventType="touchUpInside" id="JpW-3s-ne6"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKL-af-P5g">
                         <rect key="frame" x="100" y="0.0" width="175" height="21"/>
