--- a/Swiftly Test Your Might/Swiftly Test Your Might/Custom UI/CVAutomobile.xib
+++ b/Swiftly Test Your Might/Swiftly Test Your Might/Custom UI/CVAutomobile.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,12 +19,15 @@
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbO-Q6-v7j">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="FuJ-oP-nFM"/>
+                        </constraints>
                         <state key="normal" title="Modal"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4WB-B4-kZ1">
                         <rect key="frame" x="275" y="0.0" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="4WB-B4-kZ1" secondAttribute="height" multiplier="1:1" id="VnZ-OP-xsM"/>
+                            <constraint firstAttribute="width" constant="100" id="tJE-ut-enS"/>
                         </constraints>
                         <state key="normal" title="Push"/>
                         <connections>
@@ -54,7 +56,6 @@
             </view>
             <constraints>
                 <constraint firstItem="4WB-B4-kZ1" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="3Dc-W6-7Ak"/>
-                <constraint firstItem="sbO-Q6-v7j" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="1:1" id="Fcb-FB-TMP"/>
                 <constraint firstItem="4WB-B4-kZ1" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" id="Rfw-ji-ww9"/>
                 <constraint firstItem="bKL-af-P5g" firstAttribute="leading" secondItem="sbO-Q6-v7j" secondAttribute="trailing" id="SDX-c8-Pcu"/>
                 <constraint firstItem="3Qh-g8-JcW" firstAttribute="leading" secondItem="sbO-Q6-v7j" secondAttribute="trailing" id="bcS-Gy-55i"/>
